# kurswahl

./: '  Cargo.toml  Trunk.toml  index.html  rules.js
src/: main.rs
